# camera_desktop

./: .gitignore  CHANGELOG.md  Linux适配.md  README.md  pubspec.yaml
example/lib/: main.dart
ios/: camera_desktop.podspec
lib/: camera_desktop.dart
lib/src/: camera_desktop_plugin.dart  camera_desktop_windows_pigeon.dart  desktop_capture_hints.dart  image_stream_ffi.dart
linux/: CMakeLists.txt  camera.cc  camera.h  camera_desktop_plugin.cc  camera_texture.cc  device_enumerator.cc  device_enumerator.h  image_stream_ffi.cc  photo_handler.cc  pipewire_portal.cc  pipewire_portal.h  record_handler.cc
linux/test/: CMakeLists.txt
macos/: camera_desktop.podspec
macos/camera_desktop/Sources/camera_desktop/: CameraDesktopPlugin.swift  CameraSession.swift  DeviceEnumerator.swift  ImageStreamFFIBridge.m  ImageStreamHandleBridge.swift  PhotoHandler.swift  RecordHandler.swift
test/: camera_desktop_test.dart
windows/: CMakeLists.txt  camera.cpp  camera.h  camera_desktop_plugin.cpp  camera_desktop_plugin.h  camera_desktop_plugin_c_api.cpp  camera_texture.cpp  camera_texture.h  capture_controller.cpp  device_enumerator.cpp  image_stream_ffi.cpp  logging.h  photo_handler.cpp  record_handler.cpp
windows/test/: camera_desktop_plugin_test.cpp
